<resources>
    <string name="app_name">Space images</string>
    <string name="search">Search</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="location">Location</string>
    <string name="hyperlink">&lt;a href="%1$s">Image Assets&lt;/a></string>
    <string name="wrapHref">%1$s</string>
    <string name="use_as_wallpaper">Use as wallpaper</string>
    <string name="download">Download</string>
    <string name="welcome_search">You may find amazing space images,\n good luck!</string>
</resources>