<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/searchLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundGravity="top"
    tools:background="?attr/colorSurface"
    tools:context=".ui.search.SearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:weightSum="100"
        app:liftOnScroll="true">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:visibility="visible" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/shape_search"
            android:imeOptions="actionSearch"
            app:iconifiedByDefault="false"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:queryBackground="@android:color/transparent"
            app:queryHint="@string/search"
            app:searchIcon="?android:attr/actionModeWebSearchDrawable"
            tools:tooltipText="@string/app_name" />

        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:paddingHorizontal="5dp"
            android:paddingBottom="5dp"
            android:text="@string/welcome_search"
            android:textSize="35sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:visibility="gone" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/images_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="true"
        android:orientation="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_insetEdge="top"
        tools:itemCount="4"
        tools:listitem="@layout/item_image"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/pag_progress_bar"
        style="?attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/transparent"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        tools:text="ERROR"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/page_scroll"
        android:layout_width="60dp"
        android:layout_height="300dp"
        android:layout_gravity="center|end"
        android:visibility="invisible"
        tools:visibility="visible">

        <Button
            android:id="@+id/scroll_up"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="150dp"
            android:background="@drawable/ic_baseline_arrow_upward_24"
            app:backgroundTint="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toTopOf="@id/scroll_down"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <Button
            android:id="@+id/scroll_down"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/ic_baseline_arrow_downward_24"
            app:backgroundTint="?attr/colorPrimaryVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/scroll_up"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
